--- a/css/style.css
+++ b/css/style.css
@@ -15,19 +15,15 @@
 	src: url("../font/Pokemon_Solid.ttf") format('truetype');
 }
 
-html {
+html, body {
 	padding: 0;
 	margin: 0;
+	height: 100%;
 }
 
 body {
 	background: url("../img/bg.jpg");
 	font-family: Arial, Verdana, sans-serif;
-}
-
-.main {
-	max-width: 1024px;
-	margin: auto;
 }
 
 h1 {
@@ -52,17 +48,20 @@ h1, h2 {
 	color: #30609e;
 }
 
-img {
-	position:relative;
-	top: -120px;
-	right: 20px;
-	float: right;
+header {
+	height: 30%;
+}
+
+header img {
 	box-shadow: 0px 0px 10px #000;
 	border:3px solid rgba(255, 255, 255, 0.1);
 	border-radius: 5px;
+	position: absolute;
+	top: 2%;
+	right: 0.5%;
 }
 
-img:hover {
+header img:hover {
 	border:3px solid rgba(255, 231, 151, 0.5);
 }
 
@@ -79,15 +78,76 @@ li {
 }
 
 section {
-	clear: both;
-	position:relative;
-	top: -100px;
-	margin: 0 20px;
 	background-color: rgba(255, 255, 255, 0.5);
 	border-radius: 5px;
+	display: inline-block;
+	vertical-align: top;
+	width: 28.77777777777777%;
+	overflow:hidden;
+	margin: 0 0.5%;
 }
 
 section p {
-	margin: 20px;
+	margin: 4%;
 	padding: 0 0 20px 0;
+}
+
+.liseret {
+	background: #353535;
+	border-radius: 5px;
+	height: 100%;
+	width: 10%;
+	display: inline-block;
+	overflow:hidden;
+	display: block;
+	position:absolute;
+	top: 0.5%;
+	left: 0.2%;
+}
+
+.liseret img {
+	max-width: 100%;
+	height: auto;
+	display:block;
+	margin: 1em auto;
+}
+
+.first-section {
+	margin-left: 11%;
+}
+
+@media screen and (max-width: 1024px)
+{
+	body {
+		padding: 2%;
+	}
+	
+	.liseret {
+		display:none;
+	}
+	
+	section, .first-section {
+		display: block;
+		width: 100%;
+		margin: 5% 0;
+	}
+}
+
+@media screen and (max-width: 800px)
+{
+	header {
+		height: auto;
+	}
+	
+	header img {
+		position: relative;
+		display: block;
+		max-width: 100%;
+		height: auto;
+		margin: 5% auto;
+	}
+	
+	section {
+		position:relative;
+	}
 }
